FInished controllers and sentinels, work in progress comment section

--- a/templates/controllers.html
+++ b/templates/controllers.html
@@ -4,7 +4,7 @@
 {% set project = "Controllers" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "About Us" %}
+{% set project = "Controllers" %}
 
 
 <html lang="en">
