--- a/templates/duelists.html
+++ b/templates/duelists.html
@@ -16,7 +16,7 @@
         <thead>
         <tr>
             <div class="content_img">
-                <img src='/static/![](../static/valorant/agents/phoenix.png)' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <img src='/static/valorant/agents/phoenix.png' width='150%' height='200%' style="margin: 0% 0% 0%">
                 <div>Phoenix:<br>Naturally, he has an ultimate that suits his name as he can activate it, fight and die, and then come back to life where he originally activated it. </div>
             </div>
         </tr>
@@ -24,25 +24,25 @@
         <tbody>
         <tr>
             <div class="content_img">
-                <img src="![](../static/jett.png)" width='150%' height='200%' style="margin: 0% 0% 0%">
+                <img src="/static/valorant/agents/jett.png" width='150%' height='200%' style="margin: 0% 0% 0%">
                 <div>Jett:<br>She doesn't provide much utility outside of a smoke grenade but she can dash to engage/disengage or get up to high positions with her boost jump. </div>
             </div>
         </tr>
         <tr>
             <div class="content_img">
-                <img src='/static/![](../static/valorant/agents/reyna.png)' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <img src='/static/valorant/agents/reyna.png' width='150%' height='200%' style="margin: 0% 0% 0%">
                 <div>Reyna:<br>She can inflict Nearsight on her enemies, heal herself, turn intangible, and even turn invisible. </div>
             </div>
         </tr>
         <tr>
             <div class="content_img">
-                <img src='/static/![](../static/valorant/agents/raze.png)' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <img src='/static/valorant/agents/raze.png' width='150%' height='200%' style="margin: 0% 0% 0%">
                 <div>Raze:<br>Her kit has everything from a remote detonated grenade and a cluster bomb to a rocket launcher and even an exploding Roomba-like robot. </div>
             </div>
         </tr>
         <tr>
             <div class="content_img">
-                <img src='/static/![](../static/valorant/agents/yoru.png))' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <img src='/static/valorant/agents/yoru.png' width='150%' height='200%' style="margin: 0% 0% 0%">
                 <div>Yoru:<br>He’s a contender for having one of the highest skill caps due to his unique abilities that rely on having knowledge of the map, the flow of a match, and where opponents are likely to be. </div>
             </div>
         </tr>
