--- a/templates/sentinels.html
+++ b/templates/sentinels.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
+<!-- Extending the predefined project layout -->
+{% extends "layouts/base.html" %}
+{% set project = "Sentinels" %}
+
+<!- This variable sets name of browser tab  -->
+{% set project = "Sentinels" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Sentinels</title>
 </head>
-<body>
-<p>hhthhthhrhehhah</p>
+{% block body %}
+<body style="background-color: red">
+<div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
+    <iframe width="1920" height="1080">
+</iframe><br />
+<table class="table">
+    <thead>
+    <tr>
+        <div class="content_img">
+            <img src="../static/valorant/agents/skye.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+            <div>Skye<br>She’s an Initiator + Support hybrid that can help her team by engaging, scouting, and healing.</div>
+        </div>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <div class="content_img">
+            <img src="../static/valorant/agents/cypher.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+            <div>Cypher<br>Cypher is a spy who’s a master of gathering information through his camera and trip wires.</div>
+        </div>
+    </tr>
+    <tr>
+        <div class="content_img">
+            <img src="../static/sage.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+            <div>Sage<br>She’s a healer able to use ice abilities to slow and block off her enemies (her ice wall can also be used to boost allies to high ground).</div>
+        </div>
+    </tr>
+    </tbody>
+</table>
+<style>/* Parent Container */
+.content_img{
+    position: static;
+    width: 14%;
+    height: 20%;
+    float: left;
+    margin-right: 11%;
+}
+
+/* Child Text Container */
+.content_img div{
+    position: top;
+    bottom: 0;
+    right: 0;
+    background: black;
+    color: white;
+    margin-bottom: 5px;
+    font-family: "Comic Sans MS";
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+/* Hover on Parent Container */
+.content_img:hover{
+    cursor: pointer;
+}
+
+.content_img:hover div{
+    width: 100%;
+    padding: 8px 15px;
+    visibility: visible;
+    opacity: 0.7;
+}</style>
 </body>
+{% endblock %}
 </html>
