--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -33,6 +33,7 @@
                     <a class="dropdown-item" href="/sentinels">Sentinels</a>
                     <a class="dropdown-item" href="/initiators">Initiators</a>
                     <a class="dropdown-item" href="/comments">Comment On a Video</a>
+                    <a class="dropdown-item" href="/maps">maps</a>
                 </div>
             </li>
         </ul>
