--- a/templates/initiators.html
+++ b/templates/initiators.html
@@ -1,10 +1,83 @@
-<!DOCTYPE html>
+<!-- Extending the predefined project layout -->
+{% extends "layouts/base.html" %}
+{% set project = "Initiators" %}
+
+<!- This variable sets name of browser tab  -->
+{% set project = "About Us" %}
+<!DOCTYPE HTML>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Initiators</title>
-</head>
-<body>
-<p>prta</p>
-</body>
-</html>
+<!- This is a replacement block for Body in base.html -->
+{% block body %}
+    <body style="background-color: red">
+    <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
+    <iframe width="1920" height="1080">
+    </iframe><br />
+    <table class="table">
+        <thead>
+        <tr>
+            <div class="content_img">
+                <img src='/static/valorant/agents/sova.png' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <div>Sova:<br>He can use his ability to track his opponents in combination with his ultimate, which allows him to fire three bursts of lightning through walls. </div>
+            </div>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <div class="content_img">
+                <img src="/static/valorant/agents/breach.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+                <div>Breach:<br>His mechanics go through terrain and across the map to CC and kill enemies. </div>
+            </div>
+        </tr>
+        <tr>
+            <div class="content_img">
+                <img src='/static/valorant/agents/skye.png' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <div>Skye:<br>She’s an Initiator + Support hybrid that can help her team by engaging, scouting, and healing. </div>
+            </div>
+        </tr>
+        <tr>
+            <div class="content_img">
+                <img src='/static/valorant/agents/kayo.png' width='150%' height='200%' style="margin: 0% 0% 0%">
+                <div>KAY/O:<br>In addition he’s very versatile with a flash and molly, as well as a potent engage ultimate that allows his teammates to resurrect him after he dies for a short amount of time. </div>
+            </div>
+        </tr>
+        </tbody>
+    </table>
+    <style>/* Parent Container */
+    .content_img{
+        position: static;
+        width: 14%;
+        height: 20%;
+        float: left;
+        margin-right: 11%;
+    }
+
+    /* Child Text Container */
+    .content_img div{
+        position: top;
+        bottom: 0;
+        right: 0;
+        background: black;
+        color: white;
+        margin-bottom: 5px;
+        font-family: "Comic Sans MS";
+        opacity: 0;
+        visibility: hidden;
+        -webkit-transition: visibility 0s, opacity 0.5s linear;
+        transition: visibility 0s, opacity 0.5s linear;
+    }
+
+    /* Hover on Parent Container */
+    .content_img:hover{
+        cursor: pointer;
+    }
+
+    .content_img:hover div{
+        width: 100%;
+        padding: 8px 15px;
+        visibility: visible;
+        opacity: 0.7;
+    }</style>
+    </body>
+    </html>
+
+{% endblock %}
