--- a/templates/insights.html
+++ b/templates/insights.html
@@ -26,6 +26,39 @@
         <a href="https://www.canva.com/design/DAEpRQB6plI/doJNsQUlj_PvRWA__A1NFQ/view?utm_content=DAEpRQB6plI&utm_campaign=designshare&utm_medium=link&utm_source=viewer" >
             <button type="button" class="btn btn-info">TPT3</button>
         </a>
+        <a href="http://127.0.0.1:5000/binary" >
+            <button type="button" class="btn btn-info">Binary</button>
+        </a>
+        <blockquote>
+
+        </blockquote>
+        <a href="http://127.0.0.1:5000/addition" >
+            <button type="button" class="btn btn-info">Unsigned Addition</button>
+        </a>
+        <a href="http://127.0.0.1:5000/signed" >
+            <button type="button" class="btn btn-info">Signed Addition</button>
+        </a>
+        <a href="http://127.0.0.1:5000/color/" >
+            <button type="button" class="btn btn-info">Color Codes</button>
+        </a>
+            <blockquote>
+
+            </blockquote>
+        </a>
+        <a href="http://127.0.0.1:5000/logic%20gates/" >
+            <button type="button" class="btn btn-info">Logic Gates</button>
+        </a>
+        <a href="http://127.0.0.1:5000/sonakshi" >
+            <button type="button" class="btn btn-info">Greet</button>
+        </a>
+        <a href="https://youtu.be/UPD-ODdUVYg" >
+            <button type="button" class="btn btn-info">Video/Journal 0</button>
+        </a>
+        <a href="https://youtu.be/t73uThJl1J0" >
+            <button type="button" class="btn btn-info">ReadMe Video</button>
+        </a>
+
+        </a>
         <div class="container bg-light">
         <div class="col-md-12 text-center">
            </div>
@@ -38,16 +71,7 @@
     </div>
 </div>
     </body>
-    <blockquote class="blockquote text-center">
-    <a href="http://127.0.0.1:5000/sonakshi" >
-        <button type="button" class="btn btn-info">Greet</button>
-    </a>
-    <a href="https://youtu.be/UPD-ODdUVYg" >
-        <button type="button" class="btn btn-info">Video/Journal 0</button>
-    </a>
-    <a href="http://127.0.0.1:5000/binary" >
-        <button type="button" class="btn btn-info">Binary</button>
-    </a>
+
 
     </div>
 
