--- a/templates/home.html
+++ b/templates/home.html
@@ -6,11 +6,40 @@
 
 {% block body %}
 
-    <html>
+    <html xmlns="http://www.w3.org/1999/html"
     <head>
         <style>
             body {
-                background-image: url("https://motionarray.imgix.net/preview-48205qaA5d1EZMt_0009.jpg");
+                background-image: url("https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=876&q=80");
+            }
+                {#<a class="navbar-brand" href="http://127.0.0.1:5000/">All Around The World</a><img src="https://bestanimations.com/media/tiny-earth/700959513earth-spinning-rotating-animation-58.gif" alt="giffin"#}
+
+            h1 {
+                color: black;
+                text-align: center;
+            }
+
+            p {
+                color: black;
+                font-family: "Arial Rounded MT Bold";
+                font-size: 35px;
+                text-align: center;
+
+            }
+        </style>
+    </head>
+    <body>
+
+    <h1>All Around The World</h1>
+    <p>Welcome to the All Around the World Home Page!</p>
+        <img src="https://bestanimations.com/media/tiny-earth/700959513earth-spinning-rotating-animation-58.gif" alt="giffin"
+
+
+    <html xmlns="http://www.w3.org/1999/html"
+    <head>
+        <style>
+            body {
+                background-image: url("https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=876&q=80");
             }
 
             h1 {
@@ -20,20 +49,98 @@
 
             p {
                 color: black;
-                font-family: "Comic Sans MS";
-                font-size: 20px;
+                font-family: "Arial Rounded MT Bold";
+                font-size: 35px;
+                text-align: center;
+
             }
         </style>
     </head>
     <body>
 
-    <h1>All Around The World</h1>
-    <p>Welcome to our website! Feel free to take a look around. Our goal is to bring you on a tour of the seven continents of the world, including tourist locations and famous food spots.</p>
 
-    </body>
-    </html>
+    <blockquote>
+
+    </blockquote>
+
+    <blockquote>
+
+    </blockquote>
+    <a href="http://127.0.0.1:5000/about/">
+    <button type="button" class="btn btn-info">Read About Us</button>
+    <div id="list-example" class="list-group">
+        <a class="list-group-item list-group-item-action" href="#list-item-1">FAQs</a>
+        <a class="list-group-item list-group-item-action" href="#list-item-2">Navigation Help</a>
+    <blockquote>
+
+    </blockquote>
+    <blockquote>
+
+    </blockquote>
+    <blockquote>
+
+    </blockquote>
+
+    <blockquote>
+
+    </blockquote>
+
+    <blockquote>
+
+    </blockquote>
 
 
+        <blockquote>
+
+        <blockquote>
+
+        </blockquote>
+        <blockquote>
+
+        </blockquote>
+        <blockquote>
+
+        </blockquote>
+        <blockquote>
+
+        </blockquote>
+    </div>
+
+
+
+        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+            <h4 id="list-item-1">FAQS</h4>
+            <h1>1. How do I know this website is legitimate?
+               <blockquote></blockquote>
+                2. Will my information be shared?
+                <blockquote></blockquote>
+                3. Can I connect to flights?
+                <head>
+                    <style>
+                        body {
+                        }
+
+                        h1 {
+                            color: black;
+                            text-align: center;
+                        }
+
+                        p {
+                            color: black;
+                            font-family: "Arial Rounded MT Bold";
+                            font-size: 15px;
+                            text-align: center;
+
+                        }
+                    </style>
+                </head>
+                <body>
+            </h1>
+            <h4 id="list-item-2">Navigation Help</h4>
+            <h1>Welcome to our website! This is a help section for navigation, in case you have difficulties finding something. Located at the top is our navigation bar, with all of our content. This includes minilabs and tourism sites. You are currently on our home page. You have access to read more about us and what we do, as well as look at frequently asked questions. </h1>
+            <p>...</p>
+        </div>
+ </div>
 {% endblock %}
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
