Changed hover text locations

--- a/templates/controllers.html
+++ b/templates/controllers.html
@@ -46,21 +46,21 @@
 </table>
 <style>/* Parent Container */
 .content_img{
-  position: static;
-  width: 14%;
-  height: 20%;
+  position: relative);
+  width: 200px;
+  height: 200px;
   float: left;
-  margin-right: 11%;
+  margin-right: 10px;
 }
 
 /* Child Text Container */
 .content_img div{
-  position: top;
+  position: absolute;
   bottom: 0;
   right: 0;
   background: black;
   color: white;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   font-family: "Comic Sans MS";
   opacity: 0;
   visibility: hidden;
