--- a/templates/duelists.html
+++ b/templates/duelists.html
@@ -59,12 +59,12 @@
 
     /* Child Text Container */
     .content_img div{
-        position: top;
+        position: absolute;
         bottom: 0;
         right: 0;
         background: black;
         color: white;
-        margin-bottom: 5px;
+        margin-bottom: 0x;
         font-family: "Comic Sans MS";
         opacity: 0;
         visibility: hidden;
