--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,11 +28,12 @@
                     Valorant Pages
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/val">Main Page</a>
                     <a class="dropdown-item" href="/controllers">Controllers</a>
                     <a class="dropdown-item" href="/duelists">Duelists</a>
                     <a class="dropdown-item" href="/sentinels">Sentinels</a>
                     <a class="dropdown-item" href="/initiators">Initiators</a>
-                    <a class="dropdown-item" href="/maps">maps</a>
+                    <a class="dropdown-item" href="/maps">Maps</a>
                 </div>
             </li>
         </ul>
