--- a/templates/insights.html
+++ b/templates/insights.html
@@ -97,6 +97,19 @@
 
         </div>
 
+
+            </ul>
+            </body>
+            </html>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Data
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/api/joke">Joke RESTapi</a>
+                    <a class="dropdown-item" href="/api/jokes">Jokes RESTapi</a>
+                    <a class="dropdown-item" href="/crud/">SQL CRUD</a>
     </div>
     </div>
 </div>
